--- a/GigHub/Views/Home/Index.cshtml
+++ b/GigHub/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <ul class="gigs">
-    @foreach (var gig in Model)
+    @foreach (var gig in Model.OrderBy(g => g.DateTime))
     {
         <li>
             <div class="date">
