--- a/GigHub/Views/Home/Index.cshtml
+++ b/GigHub/Views/Home/Index.cshtml
@@ -1,11 +1,10 @@
-﻿@using GigHub.Controllers
-@model IEnumerable<GigHub.Models.Gig>
+﻿@model GigHub.ViewModels.HomeViewModel
 @{
     ViewBag.Title = "Home Page";
 }
 
 <ul class="gigs">
-    @foreach (var gig in Model.OrderBy(g => g.DateTime))
+    @foreach (var gig in Model.UpcommingGigs.OrderBy(g => g.DateTime))
     {
         <li>
             <div class="date">
@@ -19,12 +18,20 @@
             <div class="details">
                 <span class="artist">
                     @gig.Artist.Name
-                    <button data-artist-id="@gig.Artist.Id" class="btn btn-link js-toggle-following">Follow</button>
+                    
+                    @if (Model.ShowActions)
+                    {
+                        <button data-artist-id="@gig.Artist.Id" class="btn btn-link js-toggle-following">Follow</button>
+                    }
                 </span>
                 <span class="gerne">
                     @gig.Gerne.Name
                 </span>
-                <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going?</button>
+                
+                @if (Model.ShowActions)
+                {
+                    <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going?</button>
+                }
             </div>
         </li>
     }
