Add update gigs action + fix small button on gigform page

--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -70,7 +70,7 @@ h6,
 
 .form-control {
     font-size: 17px;
-    padding: 6px 15px;
+    height: 44px;
     -ms-border-radius: 9px;
     border-radius: 9px;
 }
@@ -156,4 +156,13 @@ h6,
 
 .gigs > li .details .gerne {
     font-size: 15px;
+}
+
+.gigs > li .actions {
+    font-size: 15px;
+    display: none;
+}
+
+.gigs > li :hover .actions {
+    display: block;
 }
