--- a/GigHub/Views/Gigs/GigForm.cshtml
+++ b/GigHub/Views/Gigs/GigForm.cshtml
@@ -1,12 +1,13 @@
 ﻿@model GigHub.ViewModels.GigFormViewModel
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = Model.Heading;
 }
 
-<h2>Add a Gig</h2>
-@using (Html.BeginForm("Create", "Gigs"))
+<h2>@Model.Heading</h2>
+@using (Html.BeginForm(Model.Action, "Gigs"))
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.Id)
 
     <p class="alert alert-info">All fields are <strong>required</strong>.</p>
     <div class="form-group">
@@ -29,7 +30,7 @@
         @Html.DropDownListFor(m => m.Gerne, new SelectList(Model.Gernes, "Id", "Name"), "", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Gerne)
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary btn-lg">Save</button>
 }
 
 @section scripts
