Add cancel API for gigs + make a separate folder for Api

--- a/GigHub/Views/Shared/Gigs.cshtml
+++ b/GigHub/Views/Shared/Gigs.cshtml
@@ -20,6 +20,11 @@
                 <span class="artist">
                     @gig.Artist.Name
                     
+                    @if (gig.IsCanceled)
+                    {
+                        <span class="label label-warning">Canceled</span>
+                    }
+
                     @if (Model.ShowActions)
                     {
                         <button data-artist-id="@gig.Artist.Id" class="btn btn-link js-toggle-following">Follow</button>
@@ -29,7 +34,7 @@
                     @gig.Gerne.Name
                 </span>
                 
-                @if (Model.ShowActions)
+                @if (Model.ShowActions && !gig.IsCanceled)
                 {
                     <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going?</button>
                 }
@@ -46,18 +51,18 @@
                 .click(function(e) {
                     var button = $(e.target);
                     $.post("/api/attendances", { gigId: button.attr("data-gig-id") })
-                .done(function () {
-                    button.off("click");
+                        .done(function() {
+                            button.off("click");
 
-                    button
-                        .removeClass("btn-default")
-                        .addClass("btn-info")
-                        .text("Going");
-                })
-                .fail(function() {
-                    alert("Something failed!");
+                            button
+                                .removeClass("btn-default")
+                                .addClass("btn-info")
+                                .text("Going");
+                        })
+                        .fail(function() {
+                            alert("Something failed!");
+                        });
                 });
-            });
 
             $(".js-toggle-following")
                 .click(function (e) {
