--- a/GigHub/Views/Gigs/Mine.cshtml
+++ b/GigHub/Views/Gigs/Mine.cshtml
@@ -25,11 +25,71 @@
                     @gig.Gerne.Name
                 </span>
                 <div class="actions">
-                    <a href="@Url.Action("Edit", "Gigs", new { gigId = gig.Id })">
+                    <a href="@Url.Action("Edit", "Gigs", new {gigId = gig.Id})">
                         Edit
+                    </a>
+                    |
+                    <a href="#" class="js-cancel-gig" data-gig-id="@gig.Id">
+                        Cancel
                     </a>
                 </div>
             </div>
         </li>
     }
 </ul>
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $(".js-cancel-gig")
+                .click(function (e) {
+                    var link = $(e.target);
+
+                    bootbox.dialog({
+                        message: "Do you want to cancel this gig?",
+                        title: "Confirmation",
+                        buttons: {
+                            no: {
+                                label: "No",
+                                className: "btn-default",
+                                callback: function () {
+                                    bootbox.hideAll();
+                                }
+                            },
+                            yes: {
+                                label: "Yes",
+                                className: "btn-danger",
+                                callback: function () {
+                                    $.post("/api/gigcancel", { gigId: link.attr("data-gig-id") })
+                                    .done(function () {
+                                        link.parents("li")
+                                            .fadeOut(function () {
+                                                $(this).remove();
+                                            });
+                                    })
+                                    .fail(function () {
+                                        alert("Something failed!");
+                                    });
+                                }
+                            }
+                        }
+                    });
+
+                    //$.ajax({
+                    //    url: "/api/gigs/?" + $.param({ "gigId": link.attr("data-gig-id") }),
+                    //        type: "DELETE"
+                    //    })
+                    //    .done(function() {
+                    //        link.parents("li")
+                    //            .fadeOut(function() {
+                    //                $(this).remove();
+                    //            });
+                    //    })
+                    //    .fail(function() {
+                    //        alert("Something failed!");
+                    //    });
+                });
+        });
+    </script>
+}
